--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  flutter_screenutil: ^5.0.0+2
+  google_fonts: ^2.1.0
+
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
